--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Cloudflare App</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
+<body>
+    <h1>Simple Cloudflare App</h1>
+    <p>See what others are saying about us!</p>
+</body>
+</html>
 <body>
     <h1>Simple Cloudflare App</h1>
     <p>See what others are saying about us!</p>
